--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,12 @@
         "link-name": "off"
       }
     ],
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ]
   }
 }
